[gd_scene load_steps=15 format=3 uid="uid://b4h2jfeyw2kj8"]

[ext_resource type="Script" path="res://scenes/ui/day_3/Day3Ui.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://ccw0h8ealqmis" path="res://scenes/ui/_shared/LivesCounter.tscn" id="2"]
[ext_resource type="Theme" uid="uid://bbe27g83qkw34" path="res://theme/theme.tres" id="3"]
[ext_resource type="PackedScene" uid="uid://bu0yao80f7vxa" path="res://scenes/ui/_shared/TimeLeftBar.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://cd0mqckia4og5" path="res://scenes/ui/_shared/PowerUpBar.tscn" id="5"]
[ext_resource type="Script" path="res://scenes/ui/_shared/LivesCounter.gd" id="6"]
[ext_resource type="Script" path="res://scenes/ui/day_3/Score.gd" id="7"]
[ext_resource type="Script" path="res://scenes/ui/_shared/TimeLeftBar.gd" id="8"]
[ext_resource type="Script" path="res://scenes/ui/day_3/HiScore.gd" id="9"]
[ext_resource type="Script" path="res://scenes/ui/_shared/PowerUpBar.gd" id="10"]
[ext_resource type="Resource" path="res://resources/instances/Player01Day03Data.tres" id="11"]
[ext_resource type="PackedScene" uid="uid://wlowrekb8xt" path="res://scenes/ui/day_3/PauseMenu.tscn" id="12"]
[ext_resource type="Script" path="res://scenes/ui/day_3/GameOver.gd" id="13"]
[ext_resource type="Script" path="res://scenes/ui/day_3/Start.gd" id="14"]

[node name="Day3Ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")
player_data = ExtResource("11")

[node name="Bars" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2i(50, 0)
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("3")

[node name="StaminaBar" parent="Bars" instance=ExtResource("4")]
offset_right = 50.0
script = ExtResource("8")

[node name="PowerUpBar" parent="Bars" instance=ExtResource("5")]
offset_top = 14.0
offset_right = 50.0
offset_bottom = 24.0
script = ExtResource("10")

[node name="LivesCounter" parent="." instance=ExtResource("2")]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -19.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("6")

[node name="Score" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 14.0
grow_horizontal = 0
theme = ExtResource("3")
text = "10000"
horizontal_alignment = 2
vertical_alignment = 1
script = ExtResource("7")

[node name="HiScore" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 14.0
grow_horizontal = 2
theme = ExtResource("3")
text = "hi 100"
vertical_alignment = 1
uppercase = true
script = ExtResource("9")

[node name="Start" type="Label" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 56.0
offset_top = 135.5
offset_right = -56.0
offset_bottom = -135.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3")
text = "Buffet
Â¡Buen Provecho!"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("14")

[node name="GameOver" type="Label" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 78.0
offset_top = 146.5
offset_right = -78.0
offset_bottom = -146.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3")
text = "Game over"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("13")

[node name="PauseMenu" parent="." instance=ExtResource("12")]
process_mode = 3
grow_horizontal = 2
grow_vertical = 2

[connection signal="hi_score_changed" from="." to="HiScore" method="_on_Day3Ui_hi_score_changed"]
[connection signal="level_state_changed" from="." to="Start" method="_on_Day3Ui_level_state_changed"]
[connection signal="level_state_changed" from="." to="GameOver" method="_on_Day3Ui_level_state_changed"]
[connection signal="lives_left_changed" from="." to="LivesCounter" method="_on_Day3Ui_lives_left_changed"]
[connection signal="pause_state_changed" from="." to="PauseMenu" method="_on_day_3_ui_pause_state_changed"]
[connection signal="power_up_changed" from="." to="Bars/PowerUpBar" method="_on_Day3Ui_power_up_changed"]
[connection signal="score_changed" from="." to="Score" method="_on_Day3Ui_score_changed"]
[connection signal="stamina_changed" from="." to="Bars/StaminaBar" method="_on_Day3Ui_time_changed"]
